fixed spacing on footer by removing Foundation columns

--- a/css/app.css
+++ b/css/app.css
@@ -211,13 +211,14 @@ FOOTER
 ***************************/
 
 .footer-p {
+  text-align: right;
   font-size: .75em;
   padding: 0;
   margin: 0 0 0 15%;;
 }
 
 footer {
-  margin: 0 20px 50px 0;
+  margin: 0 50px 50px 0;
 }
 
 /***************************
